<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="id.belitong.bigs.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_add"
        android:name="id.belitong.bigs.ui.add.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/nav_history"
        android:name="id.belitong.bigs.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
</navigation>