<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_logout_title"
        style="@style/Text.SemiBold.Body1.Center"
        android:text="@string/logout_message"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout_no"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_btn_white"
            android:paddingHorizontal="16dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Subtitle1"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout_yes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_btn_red"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Subtitle1"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>