<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:background="@android:color/white"
                app:menu="@menu/menu_home" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view1"
            style="@style/Text.SemiBold.H3"
            android:layout_width="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/welcome"
            android:textColor="@color/md_theme_dark_secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_home" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view2"
            style="@style/Text.SemiBold.H1"
            android:layout_width="wrap_content"
            android:alpha="0.8"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@id/text_view1"
            app:layout_constraintTop_toBottomOf="@id/text_view1"
            tools:text="@string/geopark_belitong_user" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/carousel_pager"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginVertical="12dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintBottom_toTopOf="@id/dots_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view2"
            tools:listitem="@layout/item_carousel_home" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:dotsColor="@android:color/darker_gray"
            app:dotsCornerRadius="8dp"
            app:dotsSize="12dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:layout_constraintBottom_toTopOf="@id/btn_geosites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carousel_pager"
            app:progressMode="false"
            app:selectedDotColor="@color/seed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_geosites"
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:alpha="0.7"
            android:background="@drawable/bg_btn_tertiary"
            android:drawableTop="@drawable/ic_geosites"
            android:elevation="4dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="36dp"
            android:text="@string/geosites"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Body2"
            app:layout_constraintEnd_toStartOf="@id/btn_geoprogramme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dots_indicator"
            tools:targetApi="m" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_geoprogramme"
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="18dp"
            android:alpha="0.7"
            android:background="@drawable/bg_btn_quaternary"
            android:drawableTop="@drawable/ic_geoprogramme"
            android:elevation="4dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="36dp"
            android:text="@string/geoprogramme"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Body2"
            app:layout_constraintEnd_toStartOf="@id/btn_maps"
            app:layout_constraintStart_toEndOf="@id/btn_geosites"
            app:layout_constraintTop_toBottomOf="@id/dots_indicator" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_maps"
            android:layout_width="110dp"
            android:layout_height="125dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            android:alpha="0.7"
            android:background="@drawable/bg_btn_secondary"
            android:drawableTop="@drawable/ic_maps"
            android:elevation="4dp"
            android:paddingHorizontal="10dp"
            android:paddingTop="36dp"
            android:text="@string/maps"
            android:textAllCaps="false"
            android:textAppearance="@style/Text.Regular.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_geoprogramme"
            app:layout_constraintTop_toBottomOf="@id/dots_indicator" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view3"
            style="@style/Text.SemiBold.H3"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/explore_geopark"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_geosites" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_geopark_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view3"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all_home"
                style="@style/Chip.Subtitle.Primary"
                android:checked="true"
                android:text="@string/all" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_geosites_home"
                style="@style/Chip.Subtitle.Primary"
                android:text="@string/geosites" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_plants_home"
                style="@style/Chip.Subtitle.Primary"
                android:text="@string/plants" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_animals_home"
                style="@style/Chip.Subtitle.Primary"
                android:text="@string/animals" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_geosites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_geopark_filter"
            tools:itemCount="10"
            tools:listitem="@layout/item_card_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>