<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="166dp"
            android:layout_height="253.15dp"
            android:src="@drawable/img_earth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            style="@style/Text.Bold.H2"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_login"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/Text.Medium.H4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_login"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/til_email_login"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="@style/Text.Medium.H4" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            style="@style/Text.Regular.H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_text_transparent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button.RoundedSmall.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/btn_bg_seed"
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:alpha="0.4"
                app:dividerColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.Medium.H4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="8dp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@android:color/black" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="160dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:alpha="0.4"
                app:dividerColor="@android:color/black" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_google_login"
            style="@style/Button.RoundedSmall.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/bg_btn_white"
            android:drawableStart="@drawable/ic_google"
            android:paddingHorizontal="32dp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google_login">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text.SemiBold.Body1.Center"
                android:layout_width="wrap_content"
                android:layout_marginEnd="4dp"
                android:alpha="0.8"
                android:text="@string/dont_have_an_account"
                android:textColor="@android:color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register_here"
                style="@style/Text.SemiBold.Body1.Center"
                android:layout_width="wrap_content"
                android:background="@drawable/bg_text_transparent"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/md_theme_dark_secondary" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/pb_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_loop="true"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>